@@ -1,27 +1,12 @@
-# JeeSite 企业信息化快速开发平台
+# TCKMS 课堂观察系统平台
 
 ## 平台简介
 
-JeeSite是基于多个优秀的开源项目，高度整合封装而成的高效，高性能，强安全性的**开源**Java EE快速开发平台。
+本系统是基于JeeSite框架基础上进行二次开发。
 
 JeeSite本身是以Spring Framework为核心容器，Spring MVC为模型视图控制器，MyBatis为数据访问层，
 Apache Shiro为权限授权层，Ehcahe对常用数据进行缓存，Activit为工作流引擎。
 
-JeeSite主要定位于企业信息化领域，已内置企业信息化系统的基础功能和高效的**代码生成**工具，
-包括：系统权限组件、数据权限组件、数据字典组件、核心工具组件、视图操作组件、工作流组件、代码生成等。
-前端界面风格采用了结构简单、性能优良、页面美观大气的Twitter Bootstrap页面展示框架。
-采用分层设计、双重验证、提交数据安全编码、密码加密、访问验证、数据权限验证。
-使用Maven做项目管理，提高项目的易开发性、扩展性。
-
-JeeSite目前包括以下三大模块，系统管理（SYS）模块、
-内容管理（CMS）模块、在线办公（OA）模块、代码生成（GEN）模块。 **系统管理模块** ，包括企业组织架构（用户管理、机构管理、区域管理）、
-菜单管理、角色权限管理、字典管理等功能； **内容管理模块** ，包括内容管理（文章、链接），栏目管理、站点管理、
-公共留言、文件管理、前端网站展示等功能； **在线办公模块** ，提供简单的请假流程实例。
-
-JeeSite 提供了常用工具进行封装，包括日志工具、缓存工具、服务器端验证、数据字典、当前组织机构数据
-（用户、机构、区域）以及其它常用小工具等。另外还提供一个强大的在线 **代码生成** 工具，
-此工具提供简单的单表、一对多、树结构功能的生成，如果对外观要求不是很高，生成的功能就可以用了。
-如果你使用了JeeSite基础框架，就可以很高效的快速开发出，优秀的信息管理系统。
 
 ## 内置功能
 
@@ -98,39 +83,7 @@ JeeSite 提供了常用工具进行封装，包括日志工具、缓存工具、
 
 ## 演示地址
 
-* <http://demo.jeesite.com/jeesite>   用户名：thinkgem    密码：admin
-
-## 快速体验
-
-1. 具备运行环境：JDK1.6+、Maven3.0+、MySql5+或Oracle10g+。
-2. 修改src\main\resources\jeesite.properties文件中的数据库设置参数。
-3. 根据修改参数创建对应MySql或Oracle数据库用户和参数。
-4. 运行bin\init-db.bat脚本，即可导入表结构及演示数据(linux操作系统：在控制台中切换至项目根目录，运行命令：mvn antrun:run -Pinit-db)
-5. 运行bin\run-tomcat7.bat或bin\run-jetty.bat，启动Web服务器（第一次运行，需要下载依赖jar包，请耐心等待）。
-6. 最高管理员账号，用户名：thinkgem 密码：admin
-
-## 常见问题
-
-1. 有时出现文字乱码：修改Tomcat的server.xml文件的Connector项，增加URIEncoding="UTF-8"
-2. 用一段时间提示内存溢出，请修改JVM参数：-Xmx512m -XX:MaxPermSize=256m
-3. 为什么新建菜单后看不到新建的菜单？因为授权问题，菜单管理只允许最高管理员账号管理（最高管理员默认账号：thinkgem 密码：admin）。
-
-## 更多文档
-
-* <https://github.com/thinkgem/jeesite/tree/master/doc>
-
-## 如何交流、反馈、参与贡献？
-
-* QQ Group：127515876 &nbsp; 209330483 &nbsp; 223507718 &nbsp; 1373527
-* E-mail：thinkgem@163.com
-* GitHub：<https://github.com/thinkgem/jeesite>
-* 开源中国：<http://git.oschina.net/thinkgem/jeesite>
-* 官方网址：<http://jeesite.com>  论坛：<http://bbs.jeesite.com>
-* 捐赠支持JeeSite（支付宝）：[thinkgem@163.com](http://jeesite.com/donation.html)
-
-一个人的个人能力再强，也无法战胜一个团队，希望兄弟姐妹的支持，能够贡献出自己的部分代码，参与进来共同完善它(^_^)。
-
-怎么共享我的代码：[手把手教你如何加入到github的开源世界！](http://www.cnblogs.com/wenber/p/3630921.html)
+项目地址：www.tocop.cn:8080/tckms
 
 ## 版权声明
 
@@ -141,22 +94,3 @@ JeeSite 提供了常用工具进行封装，包括日志工具、缓存工具、
 3. **在延伸的代码中（修改和有源代码衍生的代码中）需要带有原来代码中的协议，商标，专利声明和其他原来作者规定需要包含的说明。**
 4. 如果再发布的产品中包含一个Notice文件，则在Notice文件中需要带有Apache Licence。你可以在Notice中增加自己的许可，但不可以表现为对Apache Licence构成更改。
 3. Apache Licence也是对商业应用友好的许可。使用者也可以在需要的时候修改代码来满足需要并作为开源或商业产品发布/销售
-
-##为何使用MyBatis
-
-* 学习成本：Hibernate的真正掌握要比Mybatis来得难不少。Mybatis框架相对简单很容易上手，也更加灵活。
-对于学习过Hibernate的用户，学习起MyBatis也更容易上手。
-
-* 开发成本：大家都说Hibernate开发效率高，个人认为MyBatis的开发效率并不比Hibernate低，
-通过代码生成器和封装开发效率不是问题，并且MyBatis可控性比较高，并更易于维护。
-
-* 性能方面：由于Hibernate比较难以掌握，性能方面也成为了Hibernate的问题瓶颈，当然如果你对Hibernate非常熟，
-Hibernate性能上定不是问题。但对于大多数情况下，真正掌握Hibernate的人少之又少，然而的也就造就了项目风险加大。
-
-* 多数据库支持：有些人说MyBatis对多数据库支持困难，我认为这个不是问题，虽说目前JeeSite仅提供对MySql或Oracle
-数据库的支持，但对于支持其它数据库的改动也不是很麻烦，SQL是被专门写在XML中，对于大多数SQL来说都是通用的，
-对于不同的数据库可通过dbName区分和修改各别的SQL片段即可。
-
-上述纯属个人观点，欢迎指正（thinkgem@163.com）。
-
-如果你仍然喜欢Hibernate，请点击[下载JeeSite Hibernate版本](https://github.com/thinkgem/jeesite/tree/master_hibernate)。
